--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- mybatis plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -143,7 +148,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.mysystem.futuresystemhd.FutureSystemHdApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
